--- a/onlineEducation-common/onlineEducation-common-log/pom.xml
+++ b/onlineEducation-common/onlineEducation-common-log/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.nsfyang</groupId>
         <artifactId>onlineEducation-common</artifactId>
-        <version>3.6.3</version>
+        <version>3.6.5</version>
     </parent>
 
     <artifactId>onlineEducation-common-log</artifactId>
@@ -16,7 +16,7 @@
 
     <dependencies>
 
-        <!-- RuoYi Common Security -->
+        <!-- nsfYang Common Security -->
         <dependency>
             <groupId>com.nsfyang</groupId>
             <artifactId>onlineEducation-common-security</artifactId>
